Lomboked management module